Folder Bugs fixed RetirementManagerr changed to -r, setup namespaces etc

--- a/src/RetirementManager.Database/RetirementManager.Database.csproj
+++ b/src/RetirementManager.Database/RetirementManager.Database.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RetirementManagerr.Domain\RetirementManager.Domain.csproj" />
+    <ProjectReference Include="..\RetirementManager.Domain\RetirementManager.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
